crates/cronet-sys/include/cronet_rs_dev.h

typedef const char* Cronet_String;
typedef void* Cronet_ClientContext;
typedef struct Cronet_Engine* Cronet_EnginePtr;
typedef struct Cronet_EngineParams* Cronet_EngineParamsPtr;
typedef struct Cronet_UrlRequest* Cronet_UrlRequestPtr;
typedef struct Cronet_UrlRequestParams* Cronet_UrlRequestParamsPtr;
typedef struct Cronet_UrlRequestCallback* Cronet_UrlRequestCallbackPtr;
typedef struct Cronet_Executor* Cronet_ExecutorPtr;
typedef struct Cronet_Buffer* Cronet_BufferPtr;
typedef struct Cronet_UrlRequestStatusListener* Cronet_UrlRequestStatusListenerPtr;
typedef struct Cronet_UploadDataProvider* Cronet_UploadDataProviderPtr;
typedef struct Cronet_UploadDataSink* Cronet_UploadDataSinkPtr;
typedef struct Cronet_UrlResponseInfo* Cronet_UrlResponseInfoPtr;
typedef struct Cronet_Error* Cronet_ErrorPtr;
typedef struct Cronet_QuicHint* Cronet_QuicHintPtr;
typedef struct Cronet_PublicKeyPins* Cronet_PublicKeyPinsPtr;
typedef enum Cronet_RESULT {
  Cronet_RESULT_SUCCESS = 0,
  Cronet_RESULT_ILLEGAL_ARGUMENT = -100,
  Cronet_RESULT_ILLEGAL_ARGUMENT_STORAGE_PATH_MUST_EXIST = -101,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_PIN = -102,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HOSTNAME = -103,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_METHOD = -104,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_HEADER = -105,
  Cronet_RESULT_ILLEGAL_STATE = -200,
  Cronet_RESULT_ILLEGAL_STATE_STORAGE_PATH_IN_USE = -201,
  Cronet_RESULT_ILLEGAL_STATE_CANNOT_SHUTDOWN_ENGINE_FROM_NETWORK_THREAD = -202,
  Cronet_RESULT_ILLEGAL_STATE_ENGINE_ALREADY_STARTED = -203,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_STARTED = -204,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_INITIALIZED = -205,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_INITIALIZED = -206,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_STARTED = -207,
  Cronet_RESULT_NULL_POINTER = -300,
  Cronet_RESULT_NULL_POINTER_HOSTNAME = -301,
  Cronet_RESULT_NULL_POINTER_SHA256_PINS = -302,
  Cronet_RESULT_NULL_POINTER_EXPIRATION_DATE = -303,
  Cronet_RESULT_NULL_POINTER_ENGINE = -304,
  Cronet_RESULT_NULL_POINTER_URL = -305,
  Cronet_RESULT_NULL_POINTER_CALLBACK = -306,
  Cronet_RESULT_NULL_POINTER_EXECUTOR = -307
} Cronet_RESULT;
typedef enum Cronet_Error_ERROR_CODE {
  Cronet_Error_ERROR_CODE_ERROR_CALLBACK = 0,
  Cronet_Error_ERROR_CODE_ERROR_HOSTNAME_NOT_RESOLVED = 1,
  Cronet_Error_ERROR_CODE_ERROR_INTERNET_DISCONNECTED = 2,
  Cronet_Error_ERROR_CODE_ERROR_NETWORK_CHANGED = 3,
  Cronet_Error_ERROR_CODE_ERROR_TIMED_OUT = 4,
  Cronet_Error_ERROR_CODE_ERROR_CONNECTION_CLOSED = 5,
  Cronet_Error_ERROR_CODE_ERROR_CONNECTION_TIMED_OUT = 6,
  Cronet_Error_ERROR_CODE_ERROR_CONNECTION_REFUSED = 7,
  Cronet_Error_ERROR_CODE_ERROR_CONNECTION_RESET = 8,
  Cronet_Error_ERROR_CODE_ERROR_ADDRESS_UNREACHABLE = 9,
  Cronet_Error_ERROR_CODE_ERROR_QUIC_PROTOCOL_FAILED = 10,
  Cronet_Error_ERROR_CODE_ERROR_OTHER = 11
} Cronet_Error_ERROR_CODE;
Cronet_EngineParamsPtr Cronet_EngineParams_Create(void);
void Cronet_EngineParams_Destroy(Cronet_EngineParamsPtr);
void Cronet_EngineParams_user_agent_set(Cronet_EngineParamsPtr, Cronet_String);
void Cronet_EngineParams_accept_language_set(Cronet_EngineParamsPtr, Cronet_String);
void Cronet_EngineParams_storage_path_set(Cronet_EngineParamsPtr, Cronet_String);
void Cronet_EngineParams_enable_check_result_set(Cronet_EngineParamsPtr, bool);
Cronet_QuicHintPtr Cronet_QuicHint_Create(void);
void Cronet_QuicHint_Destroy(Cronet_QuicHintPtr);
void Cronet_QuicHint_host_set(Cronet_QuicHintPtr, Cronet_String);
void Cronet_QuicHint_port_set(Cronet_QuicHintPtr, int32_t);
void Cronet_QuicHint_alternate_port_set(Cronet_QuicHintPtr, int32_t);
Cronet_PublicKeyPinsPtr Cronet_PublicKeyPins_Create(void);
void Cronet_PublicKeyPins_Destroy(Cronet_PublicKeyPinsPtr);
void Cronet_PublicKeyPins_host_set(Cronet_PublicKeyPinsPtr, Cronet_String);
void Cronet_PublicKeyPins_pins_sha256_add(Cronet_PublicKeyPinsPtr, Cronet_String);
void Cronet_PublicKeyPins_include_subdomains_set(Cronet_PublicKeyPinsPtr, bool);
void Cronet_PublicKeyPins_expiration_date_set(Cronet_PublicKeyPinsPtr, int64_t);
Cronet_UrlRequestPtr Cronet_UrlRequest_Create(void);
void Cronet_UrlRequest_Destroy(Cronet_UrlRequestPtr);
Cronet_RESULT Cronet_UrlRequest_InitWithParams(Cronet_UrlRequestPtr, Cronet_EnginePtr,
    Cronet_String, Cronet_UrlRequestParamsPtr, Cronet_UrlRequestCallbackPtr, Cronet_ExecutorPtr);
Cronet_RESULT Cronet_UrlRequest_Start(Cronet_UrlRequestPtr);
Cronet_RESULT Cronet_UrlRequest_FollowRedirect(Cronet_UrlRequestPtr);
Cronet_RESULT Cronet_UrlRequest_Read(Cronet_UrlRequestPtr, Cronet_BufferPtr);
void Cronet_UrlRequest_Cancel(Cronet_UrlRequestPtr);
bool Cronet_UrlRequest_IsDone(Cronet_UrlRequestPtr);
void Cronet_UrlRequest_GetStatus(Cronet_UrlRequestPtr, Cronet_UrlRequestStatusListenerPtr);
Cronet_Error_ERROR_CODE Cronet_Error_error_code_get(Cronet_ErrorPtr);
Cronet_String Cronet_Error_message_get(Cronet_ErrorPtr);
int32_t Cronet_Error_internal_error_code_get(Cronet_ErrorPtr);
bool Cronet_Error_immediately_retryable_get(Cronet_ErrorPtr);
int32_t Cronet_Error_quic_detailed_error_code_get(Cronet_ErrorPtr);
typedef int64_t (*Cronet_UploadDataProvider_GetLengthFunc)(Cronet_UploadDataProviderPtr);
typedef void (*Cronet_UploadDataProvider_ReadFunc)(
    Cronet_UploadDataProviderPtr, Cronet_UploadDataSinkPtr, Cronet_BufferPtr);
typedef void (*Cronet_UploadDataProvider_RewindFunc)(
    Cronet_UploadDataProviderPtr, Cronet_UploadDataSinkPtr);
typedef void (*Cronet_UploadDataProvider_CloseFunc)(Cronet_UploadDataProviderPtr);
Cronet_UploadDataProviderPtr Cronet_UploadDataProvider_CreateWith(
    Cronet_UploadDataProvider_GetLengthFunc,
    Cronet_UploadDataProvider_ReadFunc,
    Cronet_UploadDataProvider_RewindFunc,
    Cronet_UploadDataProvider_CloseFunc);
void Cronet_UploadDataProvider_Destroy(Cronet_UploadDataProviderPtr);
void Cronet_UploadDataProvider_SetClientContext(
    Cronet_UploadDataProviderPtr, Cronet_ClientContext);
Cronet_ClientContext Cronet_UploadDataProvider_GetClientContext(Cronet_UploadDataProviderPtr);