crates/cronet-sys/src/bindings_pinned.rs

pub type Cronet_UploadDataSink_OnReadSucceededFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_UploadDataSinkPtr, bytes_read: u64, final_chunk: bool),
>;
pub type Cronet_UploadDataSink_OnReadErrorFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_UploadDataSinkPtr, error_message: Cronet_String),
>;
pub type Cronet_UploadDataSink_OnRewindSucceededFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_UploadDataSinkPtr)>;
pub type Cronet_UploadDataSink_OnRewindErrorFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_UploadDataSinkPtr, error_message: Cronet_String),
>;
unsafe extern "C" {
    pub fn Cronet_UploadDataSink_CreateWith(
        OnReadSucceededFunc: Cronet_UploadDataSink_OnReadSucceededFunc,
        OnReadErrorFunc: Cronet_UploadDataSink_OnReadErrorFunc,
        OnRewindSucceededFunc: Cronet_UploadDataSink_OnRewindSucceededFunc,
        OnRewindErrorFunc: Cronet_UploadDataSink_OnRewindErrorFunc,
    ) -> Cronet_UploadDataSinkPtr;
}
unsafe extern "C" {
    pub fn Cronet_UploadDataProvider_Destroy(self_: Cronet_UploadDataProviderPtr);
}
unsafe extern "C" {
    pub fn Cronet_UploadDataProvider_SetClientContext(
        self_: Cronet_UploadDataProviderPtr,
        client_context: Cronet_ClientContext,
    );
}
unsafe extern "C" {
    pub fn Cronet_UploadDataProvider_GetClientContext(
        self_: Cronet_UploadDataProviderPtr,
    ) -> Cronet_ClientContext;
}
unsafe extern "C" {
    pub fn Cronet_UploadDataProvider_GetLength(self_: Cronet_UploadDataProviderPtr) -> i64;
}
unsafe extern "C" {
    pub fn Cronet_UploadDataProvider_Read(
        self_: Cronet_UploadDataProviderPtr,
        upload_data_sink: Cronet_UploadDataSinkPtr,
        buffer: Cronet_BufferPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UploadDataProvider_Rewind(
        self_: Cronet_UploadDataProviderPtr,
        upload_data_sink: Cronet_UploadDataSinkPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UploadDataProvider_Close(self_: Cronet_UploadDataProviderPtr);
}
pub type Cronet_UploadDataProvider_GetLengthFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_UploadDataProviderPtr) -> i64>;
pub type Cronet_UploadDataProvider_ReadFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UploadDataProviderPtr,
        upload_data_sink: Cronet_UploadDataSinkPtr,
        buffer: Cronet_BufferPtr,
    ),
>;
pub type Cronet_UploadDataProvider_RewindFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UploadDataProviderPtr,
        upload_data_sink: Cronet_UploadDataSinkPtr,
    ),
>;
pub type Cronet_UploadDataProvider_CloseFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_UploadDataProviderPtr)>;
unsafe extern "C" {
    pub fn Cronet_UploadDataProvider_CreateWith(
        GetLengthFunc: Cronet_UploadDataProvider_GetLengthFunc,
        ReadFunc: Cronet_UploadDataProvider_ReadFunc,
        RewindFunc: Cronet_UploadDataProvider_RewindFunc,
        CloseFunc: Cronet_UploadDataProvider_CloseFunc,
    ) -> Cronet_UploadDataProviderPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_Create() -> Cronet_UrlRequestPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_Destroy(self_: Cronet_UrlRequestPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_SetClientContext(
        self_: Cronet_UrlRequestPtr,
        client_context: Cronet_ClientContext,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_GetClientContext(self_: Cronet_UrlRequestPtr) -> Cronet_ClientContext;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_InitWithParams(
        self_: Cronet_UrlRequestPtr,
        engine: Cronet_EnginePtr,
        url: Cronet_String,
        params: Cronet_UrlRequestParamsPtr,
        callback: Cronet_UrlRequestCallbackPtr,
        executor: Cronet_ExecutorPtr,
    ) -> Cronet_RESULT;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_Start(self_: Cronet_UrlRequestPtr) -> Cronet_RESULT;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_FollowRedirect(self_: Cronet_UrlRequestPtr) -> Cronet_RESULT;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_Read(
        self_: Cronet_UrlRequestPtr,
        buffer: Cronet_BufferPtr,
    ) -> Cronet_RESULT;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_Cancel(self_: Cronet_UrlRequestPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_IsDone(self_: Cronet_UrlRequestPtr) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequest_GetStatus(
        self_: Cronet_UrlRequestPtr,
        listener: Cronet_UrlRequestStatusListenerPtr,
    );
}
pub type Cronet_UrlRequest_InitWithParamsFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UrlRequestPtr,
        engine: Cronet_EnginePtr,
        url: Cronet_String,
        params: Cronet_UrlRequestParamsPtr,
        callback: Cronet_UrlRequestCallbackPtr,
        executor: Cronet_ExecutorPtr,
    ) -> Cronet_RESULT,
>;
pub type Cronet_UrlRequest_StartFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_UrlRequestPtr) -> Cronet_RESULT>;
pub type Cronet_UrlRequest_FollowRedirectFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_UrlRequestPtr) -> Cronet_RESULT>;
pub type Cronet_UrlRequest_ReadFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_UrlRequestPtr, buffer: Cronet_BufferPtr) -> Cronet_RESULT,
>;
pub type Cronet_UrlRequest_CancelFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_UrlRequestPtr)>;
pub type Cronet_UrlRequest_IsDoneFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_UrlRequestPtr) -> bool>;
pub type Cronet_UrlRequest_GetStatusFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_UrlRequestPtr, listener: Cronet_UrlRequestStatusListenerPtr),
>;
unsafe extern "C" {
    pub fn Cronet_UrlRequest_CreateWith(
        InitWithParamsFunc: Cronet_UrlRequest_InitWithParamsFunc,
        StartFunc: Cronet_UrlRequest_StartFunc,
        FollowRedirectFunc: Cronet_UrlRequest_FollowRedirectFunc,
        ReadFunc: Cronet_UrlRequest_ReadFunc,
        CancelFunc: Cronet_UrlRequest_CancelFunc,
        IsDoneFunc: Cronet_UrlRequest_IsDoneFunc,
        GetStatusFunc: Cronet_UrlRequest_GetStatusFunc,
    ) -> Cronet_UrlRequestPtr;
}
unsafe extern "C" {
    pub fn Cronet_RequestFinishedInfoListener_Destroy(self_: Cronet_RequestFinishedInfoListenerPtr);
}
unsafe extern "C" {
    pub fn Cronet_RequestFinishedInfoListener_SetClientContext(
        self_: Cronet_RequestFinishedInfoListenerPtr,
        client_context: Cronet_ClientContext,
    );
}
unsafe extern "C" {
    pub fn Cronet_RequestFinishedInfoListener_GetClientContext(
        self_: Cronet_RequestFinishedInfoListenerPtr,
    ) -> Cronet_ClientContext;
}
unsafe extern "C" {
    pub fn Cronet_RequestFinishedInfoListener_OnRequestFinished(
        self_: Cronet_RequestFinishedInfoListenerPtr,
        request_info: Cronet_RequestFinishedInfoPtr,
        response_info: Cronet_UrlResponseInfoPtr,
        error: Cronet_ErrorPtr,
    );
}
pub type Cronet_RequestFinishedInfoListener_OnRequestFinishedFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_RequestFinishedInfoListenerPtr,
        request_info: Cronet_RequestFinishedInfoPtr,
        response_info: Cronet_UrlResponseInfoPtr,
        error: Cronet_ErrorPtr,
    ),
>;
unsafe extern "C" {
    pub fn Cronet_RequestFinishedInfoListener_CreateWith(
        OnRequestFinishedFunc: Cronet_RequestFinishedInfoListener_OnRequestFinishedFunc,
    ) -> Cronet_RequestFinishedInfoListenerPtr;
}
unsafe extern "C" {
    pub fn Cronet_Error_Create() -> Cronet_ErrorPtr;
}
unsafe extern "C" {
    pub fn Cronet_Error_Destroy(self_: Cronet_ErrorPtr);
}
unsafe extern "C" {
    pub fn Cronet_Error_error_code_set(self_: Cronet_ErrorPtr, error_code: Cronet_Error_ERROR_CODE);
}
unsafe extern "C" {
    pub fn Cronet_Error_message_set(self_: Cronet_ErrorPtr, message: Cronet_String);
}
unsafe extern "C" {
    pub fn Cronet_Error_internal_error_code_set(self_: Cronet_ErrorPtr, internal_error_code: i32);
}
unsafe extern "C" {
    pub fn Cronet_Error_immediately_retryable_set(
        self_: Cronet_ErrorPtr,
        immediately_retryable: bool,
    );
}
unsafe extern "C" {
    pub fn Cronet_Error_quic_detailed_error_code_set(
        self_: Cronet_ErrorPtr,
        quic_detailed_error_code: i32,
    );
}
unsafe extern "C" {
    pub fn Cronet_Error_error_code_get(self_: Cronet_ErrorPtr) -> Cronet_Error_ERROR_CODE;
}
unsafe extern "C" {
    pub fn Cronet_Error_message_get(self_: Cronet_ErrorPtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_Error_internal_error_code_get(self_: Cronet_ErrorPtr) -> i32;
}
unsafe extern "C" {
    pub fn Cronet_Error_immediately_retryable_get(self_: Cronet_ErrorPtr) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_Error_quic_detailed_error_code_get(self_: Cronet_ErrorPtr) -> i32;
}
unsafe extern "C" {
    pub fn Cronet_QuicHint_Create() -> Cronet_QuicHintPtr;
}
unsafe extern "C" {
    pub fn Cronet_QuicHint_Destroy(self_: Cronet_QuicHintPtr);
}
unsafe extern "C" {
    pub fn Cronet_QuicHint_host_set(self_: Cronet_QuicHintPtr, host: Cronet_String);
}
unsafe extern "C" {
    pub fn Cronet_QuicHint_port_set(self_: Cronet_QuicHintPtr, port: i32);
}
unsafe extern "C" {
    pub fn Cronet_QuicHint_alternate_port_set(self_: Cronet_QuicHintPtr, alternate_port: i32);
}
unsafe extern "C" {
    pub fn Cronet_QuicHint_host_get(self_: Cronet_QuicHintPtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_QuicHint_port_get(self_: Cronet_QuicHintPtr) -> i32;
}
unsafe extern "C" {
    pub fn Cronet_QuicHint_alternate_port_get(self_: Cronet_QuicHintPtr) -> i32;
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_Create() -> Cronet_PublicKeyPinsPtr;
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_Destroy(self_: Cronet_PublicKeyPinsPtr);
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_host_set(self_: Cronet_PublicKeyPinsPtr, host: Cronet_String);
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_pins_sha256_add(
        self_: Cronet_PublicKeyPinsPtr,
        element: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_include_subdomains_set(
        self_: Cronet_PublicKeyPinsPtr,
        include_subdomains: bool,
    );
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_expiration_date_set(
        self_: Cronet_PublicKeyPinsPtr,
        expiration_date: i64,
    );
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_host_get(self_: Cronet_PublicKeyPinsPtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_pins_sha256_size(self_: Cronet_PublicKeyPinsPtr) -> u32;
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_pins_sha256_at(
        self_: Cronet_PublicKeyPinsPtr,
        index: u32,
    ) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_pins_sha256_clear(self_: Cronet_PublicKeyPinsPtr);
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_include_subdomains_get(self_: Cronet_PublicKeyPinsPtr) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_PublicKeyPins_expiration_date_get(self_: Cronet_PublicKeyPinsPtr) -> i64;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_Create() -> Cronet_EngineParamsPtr;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_Destroy(self_: Cronet_EngineParamsPtr);
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_check_result_set(
        self_: Cronet_EngineParamsPtr,
        enable_check_result: bool,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_user_agent_set(
        self_: Cronet_EngineParamsPtr,
        user_agent: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_accept_language_set(
        self_: Cronet_EngineParamsPtr,
        accept_language: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_storage_path_set(
        self_: Cronet_EngineParamsPtr,
        storage_path: Cronet_String,
    );
}
